--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -43,6 +43,13 @@
             >
 
         </activity>
+        <activity
+            android:name=".Activities.Book_Appoinment"
+            android:label="@string/app_name"
+            android:windowSoftInputMode="stateHidden"
+            >
+
+        </activity>
     </application>
 
 </manifest>
