--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -50,6 +50,14 @@
             >
 
         </activity>
+
+        <activity
+            android:name=".Activities.Booked_Detail"
+            android:label="@string/app_name"
+            android:windowSoftInputMode="stateHidden"
+            >
+
+        </activity>
     </application>
 
 </manifest>
